--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .body{
+    background-color: linear-gradient(to right, #88fc90, #45f5a8);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    height: 100vh;
+} */
+.Oxygenicon{
+    width: 50px;
+    height: 50px;
+}
