--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -2,80 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .body{
-    background-color: linear-gradient(to right, #88fc90, #45f5a8);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    height: 100vh;
-} */
+body{
+    background-color:rgb(172, 254, 172);
+ 
+}
 .Oxygenicon{
     width: 50px;
     height: 50px;
 }
-
-/* From Uiverse.io by dylanharriscameron */ 
 .card {
-  position: relative;
-  width: 200px;
-  height: 250px;
-  border-radius: 14px;
-  z-index: 1111;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 20px 20px 60px #bdffb0, -20px -20px 60px #b6ffb5;
-  ;
-}
-
-.bg {
-  position: absolute;
-  top: 5px;
-  left: 5px;
   width: 190px;
-  height: 240px;
-  z-index: 2;
-  background: rgba(255, 255, 255, 0.95);
-  backdrop-filter: blur(24px);
-  border-radius: 10px;
-  overflow: hidden;
-  outline: 2px solid white;
+  height: 254px;
+  border-radius: 30px;
+  background: lightgrey;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 50px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 26px -18px inset;
 }
 
-.blob {
+.gallery {
+  position: relative;
+  height: 300px;
+  --width: 200px; 
+  width: calc(var(--width) * 5); 
+
+}
+
+.gallery li {
   position: absolute;
-  z-index: 1;
-  top: 50%;
+  top: 0;
   left: 50%;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background-color: #084b00;
-  opacity: 1;
-  filter: blur(12px);
-  animation: blob-bounce 5s infinite ease;
-}
-
-@keyframes blob-bounce {
-  0% {
-    transform: translate(-100%, -100%) translate3d(0, 0, 0);
-  }
-
-  25% {
-    transform: translate(-100%, -100%) translate3d(100%, 0, 0);
-  }
-
-  50% {
-    transform: translate(-100%, -100%) translate3d(100%, 100%, 0);
-  }
-
-  75% {
-    transform: translate(-100%, -100%) translate3d(0, 100%, 0);
-  }
-
-  100% {
-    transform: translate(-100%, -100%) translate3d(0, 0, 0);
-  }
+  width: var(--width);
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 12px;
+  transition: transform 0.5s, opacity 0.5s, z-index 0.5s;
+  transform: translateX(calc((var(--pos) - var(--center)) * var(--width) * 0.8))
+    scale(calc(1.2 - (abs(var(--pos) - var(--center)) * 0.08)));
+  z-index: calc(10 - abs(var(--pos) - var(--center)));
+  opacity: calc(1 - (abs(var(--pos) - var(--center)) * 0.20));
 }
